# random-scripts

./: .gitignore  .pylintrc  BUILD  LICENSE  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  pythonapp.yml
src/binary_search_trees/: BUILD.bazel  __init__.py  binary_search_trees.py  helpers.py
src/binary_search_trees/tests/: BUILD.bazel  test_binary_search_trees.py
src/birthday_problem/: BUILD.bazel  birthday_problem.py
src/factorial/: BUILD.bazel  factorial.py
src/flask_api/: build_database.py  config.py  models.py  people.db  server.py
src/flask_api/apis/: __init__.py  people.py
src/flask_api/static/js/: home.js
src/flask_mega_tutorial/microblog/: .flaskenv  microblog.py
src/flask_mega_tutorial/microblog/app/: __init__.py  app.db  config.py  email.py  forms.py  models.py  routes.py  translate.py
src/flask_mega_tutorial/microblog/app/templates/: _post.html  base.html  index.html  login.html  reset_password.html  user.html
src/flask_mega_tutorial/microblog/app/translations/es/LC_MESSAGES/: messages.po
src/flask_mega_tutorial/microblog/migrations/versions/: 1d9dbbfbacb5_posts_table.py  4741e8fcba9c_users_table.py  9d52ba7501a7_add_language_to_posts.py  9faccbb19e30_followers.py  f8a232fd5fac_new_fields_in_user_model.py
src/go/golang_web_server/restful_api/: BUILD.bazel  go.mod  main.go
src/go/golang_web_server/simple_web_server/: BUILD.bazel  main.go
src/go/grpc/greeter_client/: main.go
src/go/grpc/greeter_server/: main.go
src/go/grpc/helloworld/: helloworld_grpc.pb.go
src/go/grpc/helloworld/greeter_client/: BUILD.bazel  main.go
src/go/grpc/helloworld/greeter_server/: BUILD.bazel  main.go
src/go/grpc/helloworld/proto/: BUILD.bazel  helloworld.pb.go  helloworld.proto
src/go/grpc/pcbook/: BUILD.bazel  README.md
src/go/grpc/pcbook/cmd/client/: BUILD.bazel  main.go
src/go/grpc/pcbook/cmd/server/: BUILD.bazel  main.go
src/go/grpc/pcbook/img/: BUILD.bazel
src/go/grpc/pcbook/proto/: BUILD.bazel  filter_message.proto  keyboard_message.proto  laptop_message.proto  laptop_service.proto  memory_message.proto  processor_message.proto  screen_message.proto  storage_message.proto
src/go/grpc/pcbook/sample/: BUILD.bazel  generator.go  random.go
src/go/grpc/pcbook/serializer/: BUILD.bazel  file.go
src/go/grpc/pcbook/serializer/tests/: BUILD.bazel  file_test.go
src/go/grpc/pcbook/service/: BUILD.bazel  image_store.go  laptop_server.go  laptop_store.go  test_laptop_server.go
src/go/grpc/pcbook/service/tests/: BUILD.bazel  test_laptop_server.go
src/golang_web_server/restful_api/: main.go
src/golf/: BUILD.bazel  golf_transactions.py
src/pygame_tutorial/: BUILD.bazel  game.py
src/sieve_of_eratosthenes/: BUILD.bazel  sieve_of_eratosthenes.py
src/sorting_algorithms/merge_sort/: merge_sort.py
src/tests/: test_binary_search_trees.py
src/web_application/: BUILD.bazel  app.py
src/web_application/schema/: alembic.ini  schools.sqlite3
src/web_application/schema/alembic/versions/: 5108b8b89a36_create_schools_geocoded_table.py
src/web_application/templates/: detail.html  layout.html  list.html  zip_codes.html
