load("@rules_python//python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//src/binary_search_trees:__subpackages__"])

py_library(
    name = "helpers",
    srcs = ["helpers.py"],
)

py_library(
    name = "binary_search_trees",
    srcs = ["binary_search_trees.py"],
    deps = ["//src/binary_search_trees:helpers"],
)

py_binary(
    name = "bst",
    srcs = ["binary_search_trees.py"],
    main = "binary_search_trees.py",
    deps = ["//src/binary_search_trees:helpers"],
)
