load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "restful_api_lib",
    srcs = ["main.go"],
    importpath = "github.com/sfortson/random-scripts/src/go/golang_web_server/restful_api",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gorilla_mux//:mux"],
)

go_binary(
    name = "restful_api",
    embed = [":restful_api_lib"],
    visibility = ["//visibility:public"],
)
