load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "simple_web_server_lib",
    srcs = ["main.go"],
    importpath = "github.com/sfortson/random-scripts/src/go/golang_web_server/simple_web_server",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "simple_web_server",
    embed = [":simple_web_server_lib"],
    visibility = ["//visibility:public"],
)
