load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "greeter_server_lib",
    srcs = ["main.go"],
    importpath = "github.com/sfortson/random-scripts/src/go/grpc/helloworld/greeter_server",
    visibility = ["//visibility:private"],
    deps = [
        "//src/go/grpc/helloworld/proto:helloworld",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "greeter_server",
    embed = [":greeter_server_lib"],
    visibility = ["//visibility:public"],
)
