load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "proto_proto",
    srcs = [
        "keyboard_message.proto",
        "laptop_message.proto",
        "memory_message.proto",
        "processor_message.proto",
        "screen_message.proto",
        "storage_message.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "proto_go_proto",
    importpath = "github.com/sfortson/random-scripts/go/grpc/pcbook/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":proto_go_proto"],
    importpath = "github.com/sfortson/random-scripts/go/grpc/pcbook/proto",
    visibility = ["//visibility:public"],
)
