load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "serializer",
    srcs = ["file.go"],
    importpath = "github.com/sfortson/random-scripts/src/go/grpc/pcbook/serializer",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)
