load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "laptop_server.go",
        "laptop_store.go",
        "test_laptop_server.go",
    ],
    importpath = "github.com/sfortson/random-scripts/src/go/grpc/pcbook/service",
    visibility = ["//visibility:public"],
    deps = [
        "//src/go/grpc/pcbook/proto",
        "//src/go/grpc/pcbook/sample",
        "//src/go/grpc/pcbook/serializer",
        "@com_github_google_uuid//:uuid",
        "@com_github_jinzhu_copier//:copier",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
