load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/sfortson/random-scripts/src/go/grpc/pcbook/cmd/client",
    visibility = ["//visibility:private"],
    deps = [
        "//src/go/grpc/pcbook/proto",
        "//src/go/grpc/pcbook/sample",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
